--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body {
 =========================================== */
 .container {
    display: flex;
-   max-width: 550px;
+   max-width: 100%;
    margin: auto;
    flex-wrap: wrap;
    justify-content: space-between;
@@ -37,7 +37,7 @@ body {
 }
 
 .container .pokemon {
-   width: 49%;
+   width: 24%;
    background-color: #fff;
    background-clip: border-box;
    border: 1px solid rgba(0, 0, 0, 0.125);
